# wingb

./: .gitignore  Cargo.toml  Dockerfile  Jenkinsfile  Makefile  README.org  Shuttle.toml  main.py  pyproject.toml  wingb.py
sql/: psql_fetch_schema.sql
src/: app_state.rs  auth.rs  lib.rs  main.rs  web.rs
src/web/: auth.rs  htmx.rs  mod.rs
src/web/handler/: auth.rs  mod.rs  sql_prompt.rs
src/web/pages/: login.html
static/: index.html  prompt.md  sql-table.html
templates/: login.html
templates/component/: command-line.html  llm-prompt.html  loader.html  sql-table.html
templates/layout/: base.html
templates/page/: index.html  login.html
