[package]
name = "wingdb"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
askama = { version = "0.12.1" }
askama_axum = "0.4.0"
async-trait = "0.1.83"
axum = "0.7.9"
axum-htmx = { version = "0.6.0", features = ["auto-vary"] }
axum-login = "0.16.0"
log = "0.4.22"
promptpunch = { git = "https://github.com/scipunch/promptpunch", version = "0.1.0" }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = ["sqlite", "any", "postgres", "runtime-tokio", "tls-rustls"] }
sqlx-core = "0.8.2"
time = "0.3.37"
tokio = { version = "1.42.0", features = ["full"] }
tower-sessions = { version = "0.13.0", features = ["signed"] }
tower-sessions-sqlx-store = "0.14.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
